Align VEX semantics with CISA guidance and tooling ecosystem
* Includes the *identity* of affected components in VEX exports. Previously, all vulnerabilities in a VEX export referred to the project (`metadata.component`). The assumption was that VEX was inherently a product-level concept. This is not actually true, and CISA itself says to include the "subcomponents" from which a vulnerability originates. It also caused conflcits when a vulnerability affected multiple components in a project, which each component having a different analysis. Note that only component identifiers are needed for this use case, and details like licenses, properties, external references are baggage at best and leak internals at worst. So, we only include group, name, version, CPE, PURL, SWID tag, and hashes.
* No longer requires exact matches of `vulnerability.source.name` during VEX imports. No other tool does it, and enforcing this actively defeats compatibility with the broader ecosystem. We now only match on vulnerability IDs, but skip records and log a warning when more than one vulnerability matches, which should be *very* rare.
* Drops `bom-ref`s from `vulnerability` objects in VEX exports entirely. They previously caused issues with BOM ref uniqueness. Since nothing references the objects, the refs are not needed at all.

Co-authored-by: Contain.Security <contain.security@pacificdigitalconsulting.com>
Signed-off-by: nscuro <nscuro@protonmail.com>